--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "phpswift/cms",
   "require": {
     "php": ">=7.0",
-    "phpswift/cms": "^1.0"
+    "phpswift/cms-widgets": "^1.0"
   },
   "repositories": [
     {
